fix: svg spacing

--- a/src/styles/svgs.scss
+++ b/src/styles/svgs.scss
@@ -1,7 +1,7 @@
 .retro-window {
   position: absolute;
   top: 126px;
-  left: 40%;
+  left: 388px;
 }
 
 .retro-window-sm {
@@ -13,7 +13,7 @@
 .retro-grid {
   position: absolute;
   top: 0px;
-  right: 0px;
+  left: 0px;
 }
 
 .retro-grid-sm {
